completed header section and structuring of spotlight section

--- a/index.html
+++ b/index.html
@@ -1,28 +1,93 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
-    <header>
-        <nav class="left">
-            <a href="#"><img src="images/menu.svg" alt="menu"/></a>
-        </nav>
-        <nav class="middle">
-            <h1><a href="#"> NONAME </a></h1>
-        </nav>
-        <nav class="right">
-            <ul>
-                <li><a href="#"><img src="images/Avatar-outline.svg" alt="Avatar-outline"/></a></li>
-                <li><a href="#"><img src="images/Heart-noti.svg" alt="Heart-noti"/></a></li>
-                <li><a href="#"><img src="images/Cart-noti.svg" alt="Cart-noti"></a></li>
-            </ul>
-        </nav>
-    </header>
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
 
-</body>
+  <body>
+    <section id="hero">
+      <section class="wrapper">
+        <header>
+            <nav class="left">
+                <a href="#"><img src="images/menu.svg" alt="menu" /></a>
+            </nav>
+            <nav class="middle">
+                <h1><a href="#"> NONAME </a></h1>
+            </nav>
+            <nav class="right">
+                <ul>
+                <li>
+                    <a href="#"
+                    ><img src="images/Avatar-outline.svg" alt="Avatar-outline"
+                    /></a>
+                </li>
+                <li>
+                    <a href="#">
+                    <div class="eight"><span>8</span></div>
+                    <img src="images/Heart-noti.svg" alt="Heart-noti" />
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                    <div class="bag"><span>2</span></div>
+                    <img src="images/Cart-noti.svg" alt="Cart-noti" />
+                    </a>
+                </li>
+                </ul>
+            </nav>
+        </header>
+          <section id="spotlight">
+            <section class="left">
+                <ul>
+                    <li><a href="#">Shop Women</a></li>
+                    <li><a href="#">Shop Men</a></li>
+                    <li><a href="#">Kids wear</a></li>
+                    <li>&nbsp;</li>
+                    <li><a href="#">Alexander McQueen</a></li>
+                    <li><a href="#">Armani Jeans</a></li>
+                    <li><a href="#">Burberry</a></li>
+                    <li><a href="#">Dolce & Gabbana</a></li>
+                    <li><a href="#">Gucci</a></li>
+                    <li><a href="#">Versace</a></li>
+                    <li><a href="#">Philip Plien</a></li>
+                    <li><a href="#">+46 Brands</a></li>
+                </ul>
+            </section>
+            <section class="middle">
+                <h2>SALE: GET UP TO 50% OFF NOW</h2>
+                <P>The greatest selection of selection of sales from the world's finest fashion boutiques and brands -Only on NONAME</P>
+                <a href="#" class="button">Shop Now</a>
+                <div class="arrow">
+                    <a href="#"><img src="images/next.svg" alt="arrow"></a>
+                    <a href="#"><img src="images/next.svg" alt="arrow"></a>
+                    <ul>
+                        <li>
+                            <hr class="line">
+                        </li>
+                        <li>
+                            <hr class="line">
+                        </li>
+                        <li>
+                            <hr class="line">
+                        </li>
+                    </ul>
+                </div>
+            </section>
+            <section class="right">
+                <div class="imgcontainer">
+                    <img src="images/Landingpage-pic.jpg" alt=" Landingpage-pic">
+                </div>
+                <div class="content">
+                    <p>The greatest selection of sale pieces from the world's finest fashion boutiques and brands -only on NONAME</p>
+                    <h4><a href="#">View Collection <img src="images/next.svg" alt="next"></a></h4>
+                </div>
+            </section>
+          
+      </section>
+    </section>
+  </body>
 </html>
