completed both structuring and style of 4th section (ie id=girl section)

--- a/index.html
+++ b/index.html
@@ -106,14 +106,38 @@
             </div>
             <div class="tail">
                 <ul>
-                    <li><div class="photo"><img src="images/New-in-1.jpg" alt=""></div><a><h5>Zara</h5><small>slogan-print cotton hoodie</small><h4>$130</h4></a></li>
-                    <li><a><img src="images/black-bg-arrow.svg" alt=""/></a></li>
+                    <li><div class="photo"><img src="images/New-in-1.jpg" alt=""></div><a href="#"><h5>Zara</h5><small>slogan-print cotton hoodie</small><h4>$130</h4></a></li>
+                    <li><a href="#"><img src="images/black-bg-arrow.svg" alt=""/></a></li>
                     <li><div class="photo"><img src="images/New-in-2.jpg" alt=""/></div><a href="#"><h5>Zara</h5><small>slogan-print cotton hoodie</small><h4>$130</h4></a></li>
-                    <li><div class="photo"><img src="images/New-in-4.jpg" alt=""/></div><a><h5>Zara</h5><small>slogan-print cotton hoodie</small><h4>$130</h4></a></li>
-                    <li><div class="photo"><img src="images/New-in-3.jpg" alt=""/></div><a><div class="sale"><h5>sale 24%</h5></div><h5>Zara</h5><small>slogan-print cotton hoodie</small><h4>$130</h4></a></li>
-                    <li><a><img src="images/black-bg-arrow.svg" alt=""/></a></li>
-                    <li><div class="photo"><img src="images/New-in-4.jpg" alt=""/></div><a><h5>Zara</h5><small>slogan-print cotton hoodie</small><h4>$130</h4></a></li>
+                    <li><div class="photo"><img src="images/New-in-4.jpg" alt=""/></div><a href="#"><h5>Zara</h5><small>slogan-print cotton hoodie</small><h4>$130</h4></a></li>
+                    <li><div class="photo"><img src="images/New-in-3.jpg" alt=""/></div><a href="#"><div class="sale"><h5>sale 24%</h5></div><h5>Zara</h5><small>slogan-print cotton hoodie</small><h4>$130</h4></a></li>
+                    <li><a href="#"><img src="images/black-bg-arrow.svg" alt=""/></a></li>
+                    <li><div class="photo"><img src="images/New-in-4.jpg" alt=""/></div><a href="#"><h5>Zara</h5><small>slogan-print cotton hoodie</small><h4>$130</h4></a></li>
                 </ul>
+            </div>
+        </section>
+    </section>
+    <section id="girl">
+        <section class="wrapper">
+            <div class="left">
+                <div class="pic">
+                    <img src="images/collection-new-in-1.jpg" alt="girl"/>
+                </div>
+                <div class="description">
+                    <h6>Collection</h6>
+                    <p>new in: hand-picked daily from the world's best brands</p>
+                    <span><a href="#">Explore all <img src="images/next-Default.svg" alt="next-Default"/></a></span>
+                </div>
+            </div>
+            <div class="right">
+                <div class="pic">
+                    <img src="images/collection-new-in-2.jpg" alt="girl"/>
+                </div>
+                <div class="description">
+                    <h6>Collection</h6>
+                    <p>new in: hand-picked daily from the world's best brands</p>
+                    <span><a href="#">Explore all <img src="images/next-Default.svg" alt="next-Default"/></a></span>
+                </div>
             </div>
         </section>
     </section>
