completed structuring and started styling of  5thsection(ie cloth section)

--- a/index.html
+++ b/index.html
@@ -141,6 +141,40 @@
             </div>
         </section>
     </section>
+    <section id="cloth">
+        <section class="wrapper">
+            <div class="head">
+                <ul>
+                    <li>Twitter</li>
+                    <li></li>
+                    <li>Instagram</li>
+                    <li></li>
+                    <li>Facebook</li>
+                </ul>
+            </div>
+            <div class="tail">
+                <div class="pic">
+                    <img src="images/Twitter-ad.jpg" alt="Twitter-ad"/>
+                </div>
+                <div class="icon">
+                    <a href="#"><img src="images/twitter-bg.svg" alt="Twitter"></a>
+                </div>
+            </div>
+            <div class="pic">
+                <img src="images/Insta-ad.jpg" alt="Insta-ad"/>
+            </div>
+            <div class="icon">
+                <a href="#"><img src="images/Insta-bg.svg" alt="insta"/></a>
+            </div>
+        </div><div class="pic">
+            <img src="images/FB-ad.jpg" alt="fb-ad"/>
+        </div>
+        <div class="icon">
+            <a href="#"><img src="images/FB-bg.png" alt="fb"/></a>
+        </div>
+    </div>
+        </section>
+    </section>
 
 </body>
 
