--- a/index.html
+++ b/index.html
@@ -102,17 +102,45 @@
         <section class="wrapper">
             <div class="head">
                 <h4>New in: hand-picked daily from the world's best brands</h4>
-                <a href="#" class="button">View All <img src="images/next.svg" alt="arrow"/></a>
+                <a href="#" class="button">View All <img src="images/next.svg" alt="arrow" /></a>
             </div>
             <div class="tail">
                 <ul>
-                    <li><div class="photo"><img src="images/New-in-1.jpg" alt=""></div><a href="#"><h5>Zara</h5><small>slogan-print cotton hoodie</small><h4>$130</h4></a></li>
-                    <li><a href="#"><img src="images/black-bg-arrow.svg" alt=""/></a></li>
-                    <li><div class="photo"><img src="images/New-in-2.jpg" alt=""/></div><a href="#"><h5>Zara</h5><small>slogan-print cotton hoodie</small><h4>$130</h4></a></li>
-                    <li><div class="photo"><img src="images/New-in-4.jpg" alt=""/></div><a href="#"><h5>Zara</h5><small>slogan-print cotton hoodie</small><h4>$130</h4></a></li>
-                    <li><div class="photo"><img src="images/New-in-3.jpg" alt=""/></div><a href="#"><div class="sale"><h5>sale 24%</h5></div><h5>Zara</h5><small>slogan-print cotton hoodie</small><h4>$130</h4></a></li>
-                    <li><a href="#"><img src="images/black-bg-arrow.svg" alt=""/></a></li>
-                    <li><div class="photo"><img src="images/New-in-4.jpg" alt=""/></div><a href="#"><h5>Zara</h5><small>slogan-print cotton hoodie</small><h4>$130</h4></a></li>
+                    <li>
+                        <div class="photo"><img src="images/New-in-1.jpg" alt=""></div><a href="#">
+                            <h5>Zara</h5><small>slogan-print cotton hoodie</small>
+                            <h4>$130</h4>
+                        </a>
+                    </li>
+                    <li><a href="#"><img src="images/black-bg-arrow.svg" alt="" /></a></li>
+                    <li>
+                        <div class="photo"><img src="images/New-in-2.jpg" alt="" /></div><a href="#">
+                            <h5>Zara</h5><small>slogan-print cotton hoodie</small>
+                            <h4>$130</h4>
+                        </a>
+                    </li>
+                    <li>
+                        <div class="photo"><img src="images/New-in-4.jpg" alt="" /></div><a href="#">
+                            <h5>Zara</h5><small>slogan-print cotton hoodie</small>
+                            <h4>$130</h4>
+                        </a>
+                    </li>
+                    <li>
+                        <div class="photo"><img src="images/New-in-3.jpg" alt="" /></div><a href="#">
+                            <div class="sale">
+                                <h5>sale 24%</h5>
+                            </div>
+                            <h5>Zara</h5><small>slogan-print cotton hoodie</small>
+                            <h4>$130</h4>
+                        </a>
+                    </li>
+                    <li><a href="#"><img src="images/black-bg-arrow.svg" alt="" /></a></li>
+                    <li>
+                        <div class="photo"><img src="images/New-in-4.jpg" alt="" /></div><a href="#">
+                            <h5>Zara</h5><small>slogan-print cotton hoodie</small>
+                            <h4>$130</h4>
+                        </a>
+                    </li>
                 </ul>
             </div>
         </section>
@@ -121,22 +149,22 @@
         <section class="wrapper">
             <div class="left">
                 <div class="pic">
-                    <img src="images/collection-new-in-1.jpg" alt="girl"/>
+                    <img src="images/collection-new-in-1.jpg" alt="girl" />
                 </div>
                 <div class="description">
                     <h6>Collection</h6>
                     <p>new in: hand-picked daily from the world's best brands</p>
-                    <span><a href="#">Explore all <img src="images/next-Default.svg" alt="next-Default"/></a></span>
+                    <span><a href="#">Explore all <img src="images/next-Default.svg" alt="next-Default" /></a></span>
                 </div>
             </div>
             <div class="right">
                 <div class="pic">
-                    <img src="images/collection-new-in-2.jpg" alt="girl"/>
+                    <img src="images/collection-new-in-2.jpg" alt="girl" />
                 </div>
                 <div class="description">
                     <h6>Collection</h6>
                     <p>new in: hand-picked daily from the world's best brands</p>
-                    <span><a href="#">Explore all <img src="images/next-Default.svg" alt="next-Default"/></a></span>
+                    <span><a href="#">Explore all <img src="images/next-Default.svg" alt="next-Default" /></a></span>
                 </div>
             </div>
         </section>
@@ -153,26 +181,20 @@
                 </ul>
             </div>
             <div class="tail">
-                <div class="pic">
-                    <img src="images/Twitter-ad.jpg" alt="Twitter-ad"/>
+                    <div class="pic">
+                        <img src="images/Twitter-ad.jpg" alt="Twitter-ad" />
+                        <a href="#"><img src="images/twitter-bg.svg" alt="Twitter"></a>
+                    </div>
+                    <div class="pic">
+                        <img src="images/Insta-ad.jpg" alt="Insta-ad" />
+                        <a href="#"><img src="images/Insta-bg.svg" alt="insta" /></a>
+                    </div>
+                   <div class="pic size">
+                    <img src="images/FB-ad.jpg" alt="fb-ad" />
+                    <a href="#"><img src="images/FB-bg.png" alt="fb" /></a>
                 </div>
-                <div class="icon">
-                    <a href="#"><img src="images/twitter-bg.svg" alt="Twitter"></a>
-                </div>
             </div>
-            <div class="pic">
-                <img src="images/Insta-ad.jpg" alt="Insta-ad"/>
-            </div>
-            <div class="icon">
-                <a href="#"><img src="images/Insta-bg.svg" alt="insta"/></a>
-            </div>
-        </div><div class="pic">
-            <img src="images/FB-ad.jpg" alt="fb-ad"/>
-        </div>
-        <div class="icon">
-            <a href="#"><img src="images/FB-bg.png" alt="fb"/></a>
-        </div>
-    </div>
+            
         </section>
     </section>
 
