completed footer structuring

--- a/index.html
+++ b/index.html
@@ -226,6 +226,59 @@
             </div>
         </section>
     </section>
+    <footer>
+        <hr class="line">
+        <section class="wrapper">
+            <div class="head">
+                <div class="left">
+                    <h3>NO NAME</h3>
+                    <p>NONAME is the world's best brand for western clothes</p>
+                </div>
+                <div class="right">
+                    <div class="list">
+                        <h5>Company</h5>
+                        <ul>
+                            <li><a href="#">About Us</a></li>
+                            <li><a href="#">Career</a></li>
+                            <li><a href="#">Management</a></li>
+                            <li><a href="#">Blog</a></li>
+                        </ul>
+                    </div>
+                    <div class="list">
+                        <h5>Our service</h5>
+                        <ul>
+                            <li><a href="#">Help Center</a></li>
+                            <li><a href="#">FAQ</a></li>
+                            <li><a href="#">Transaction</a></li>
+                            <li><a href="#">Investation</a></li>
+                        </ul>
+                    </div>
+                    <div class="list">
+                        <h5>Contact info</h5>
+                        <ul>
+                            <li><a href="tel: +088 1234 6756 7867"><img src="images/Phone-default.svg" alt="">(+088 1234 6756 7867)</a></li>
+                            <li><a href="mailto: noname@gmail.com">noname@gmail.com</a></li>
+                            <li><a href="#"><img src="images/Fb-default.svg" alt="fb"></a></li>
+                            <li><a href="#"><img src="images/Messenger-default.svg" alt="Messenger-default"></a></li>
+                            <li><a href="#"><img src="images/whatsapp-default.svg" alt="WA"></a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="bottom">
+                <div class="first">
+                    <span>copyright @2021 noname inc.</span>
+                </div>
+                <div class="last">
+                    <ul>
+                        <li><a href="#">Privacy</a></li>
+                        <li><a href="#">Security</a></li>
+                        <li><a href="#">Terms</a></li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+    </footer>
 
 </body>
 
