footer section completed

--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
         <section class="wrapper">
             <div class="head">
                 <div class="left">
-                    <h3>NO NAME</h3>
+                    <h4>NONAME</h4>
                     <p>NONAME is the world's best brand for western clothes</p>
                 </div>
                 <div class="right">
@@ -258,10 +258,12 @@
                         <ul>
                             <li><a href="tel: +088 1234 6756 7867"><img src="images/Phone-default.svg" alt="">(+088 1234 6756 7867)</a></li>
                             <li><a href="mailto: noname@gmail.com">noname@gmail.com</a></li>
-                            <li><a href="#"><img src="images/Fb-default.svg" alt="fb"></a></li>
-                            <li><a href="#"><img src="images/Messenger-default.svg" alt="Messenger-default"></a></li>
-                            <li><a href="#"><img src="images/whatsapp-default.svg" alt="WA"></a></li>
                         </ul>
+                        <div class="social">
+                            <a href="#"><img src="images/Fb-default.svg" alt="fb"></a>
+                            <a href="#"><img src="images/Messenger-default.svg" alt="Messenger-default"></a>
+                            <a href="#"><img src="images/whatsapp-default.svg" alt="WA"></a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -271,7 +273,7 @@
                 </div>
                 <div class="last">
                     <ul>
-                        <li><a href="#">Privacy</a></li>
+                        <li><a href="#">Privacy.</a></li>
                         <li><a href="#">Security</a></li>
                         <li><a href="#">Terms</a></li>
                     </ul>
