completed styling the entire website ,also sorted the spotlight problem

--- a/index.html
+++ b/index.html
@@ -58,13 +58,11 @@
                                 <li><a href="#">+46 Brands</a></li>
                             </ul>
                         </div>
-                       
-                       
                     </div>
                     <div class="bottom">
                          <div class="content">
                             <h4>SALE: GET UP TO 50% OFF NOW</h4>
-                            <P>The greatest selection of selection of sales from the world's finest fashion boutiques
+                            <P>The greatest selection of sales pieces from the world's finest fashion boutiques
                                 and brands-Only on NONAME</P>
                             <a href="#" class="button">Shop Now</a>
                         </div>
@@ -95,7 +93,7 @@
                         <small>The greatest selection of sale pieces from the world's finest fashion boutiques and
                             brands
                             -only on NONAME</small>
-                        <h4><a href="#">View Collection <img src="images/next.svg" alt="next"></a></h4>
+                        <span><a href="#">View Collection<img src="images/next.svg" alt="next"></a><span>
                     </div>
                 </section>
             </section>
