completed styling and restructured

--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
                             <P>The greatest selection of sales pieces from the world's finest fashion boutiques
                                 and brands-Only on NONAME</P>
                             <a href="#" class="button">Shop Now</a>
-                        </div>
-                        <div class="bottom_part">
+                        <!-- </div> -->
+                        <!-- <div class="bottom_part"> -->
                             <ul class="line">
                                 <li>
                                     <hr class="line">
