--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/responsive.css"/>
+    <link rel="stylesheet" href="css/responsive.css" />
 </head>
 
 <body>
+    <!-- section hero begins -->
     <section id="hero">
         <section class="wrapper">
+            <!-- header begins -->
             <header>
                 <nav class="left">
                     <a href="#"><img src="images/menu.svg" alt="menu" /></a>
@@ -40,6 +42,8 @@
                     </ul>
                 </nav>
             </header>
+            <!-- header ends -->
+            <!-- spotlight begins -->
             <section id="spotlight">
                 <section class="left">
                     <div class="top">
@@ -61,13 +65,11 @@
                         </div>
                     </div>
                     <div class="bottom">
-                         <div class="content">
+                        <div class="content">
                             <h4>SALE: GET UP TO 50% OFF NOW</h4>
                             <P>The greatest selection of sales pieces from the world's finest fashion boutiques
                                 and brands-Only on NONAME</P>
                             <a href="#" class="button">Shop Now</a>
-                        <!-- </div> -->
-                        <!-- <div class="bottom_part"> -->
                             <ul class="line">
                                 <li>
                                     <hr class="line">
@@ -100,6 +102,8 @@
             </section>
         </section>
     </section>
+    <!-- spotlight ends -->
+    <!-- product section begins -->
     <section id="products">
         <section class="wrapper">
             <div class="head">
@@ -147,11 +151,13 @@
             </div>
         </section>
     </section>
-    <section id="girl">
+    <!-- product section ends -->
+    <!-- article section begins -->
+    <section id="article">
         <section class="wrapper">
             <div class="left">
                 <div class="pic">
-                    <img src="images/collection-new-in-1.jpg" alt="girl" />
+                    <img src="images/collection-new-in-1.jpg" alt="article" />
                 </div>
                 <div class="description">
                     <h6>Collection</h6>
@@ -161,7 +167,7 @@
             </div>
             <div class="right">
                 <div class="pic">
-                    <img src="images/collection-new-in-2.jpg" alt="girl" />
+                    <img src="images/collection-new-in-2.jpg" alt="article" />
                 </div>
                 <div class="description">
                     <h6>Collection</h6>
@@ -171,6 +177,8 @@
             </div>
         </section>
     </section>
+    <!-- product section ends -->
+    <!-- cloth section begins -->
     <section id="cloth">
         <section class="wrapper">
             <div class="head">
@@ -183,22 +191,24 @@
                 </ul>
             </div>
             <div class="tail">
-                    <div class="pic">
-                        <img src="images/Twitter-ad.jpg" alt="Twitter-ad" />
-                        <a href="#"><img src="images/twitter-bg.svg" alt="Twitter"></a>
-                    </div>
-                    <div class="pic">
-                        <img src="images/Insta-ad.jpg" alt="Insta-ad" />
-                        <a href="#"><img src="images/Insta-bg.svg" alt="insta" /></a>
-                    </div>
-                   <div class="pic size">
+                <div class="pic">
+                    <img src="images/Twitter-ad.jpg" alt="Twitter-ad" />
+                    <a href="#"><img src="images/twitter-bg.svg" alt="Twitter"></a>
+                </div>
+                <div class="pic">
+                    <img src="images/Insta-ad.jpg" alt="Insta-ad" />
+                    <a href="#"><img src="images/Insta-bg.svg" alt="insta" /></a>
+                </div>
+                <div class="pic size">
                     <img src="images/FB-ad.jpg" alt="fb-ad" />
                     <a href="#"><img src="images/FB-bg.png" alt="fb" /></a>
                 </div>
             </div>
-            
+
         </section>
     </section>
+    <!-- cloth section ends -->
+    <!-- contact section starts -->
     <section id="contact">
         <section class="wrapper">
             <div class="top">
@@ -207,17 +217,17 @@
             <div class="bottom">
                 <ul>
                     <li>
-                        <img src="images/Phone-default.svg" alt="Phone-default"/>
+                        <img src="images/Phone-default.svg" alt="Phone-default" />
                         <h5>Need Help</h5>
                         <span>Contact our global customer service team</span>
                     </li>
                     <li>
-                        <img src="images/whatsapp-default.svg" alt="whatsapp-default"/>
+                        <img src="images/whatsapp-default.svg" alt="whatsapp-default" />
                         <h5>Need Help</h5>
                         <span>Contact our global customer service team</span>
                     </li>
                     <li>
-                        <img src="images/Messenger-default.svg" alt="Messenger-default"/>
+                        <img src="images/Messenger-default.svg" alt="Messenger-default" />
                         <h5>Need Help</h5>
                         <span>Contact our global customer service team</span>
                     </li>
@@ -225,6 +235,8 @@
             </div>
         </section>
     </section>
+    <!-- contact section ends -->
+    <!-- footer section starts -->
     <footer>
         <hr class="line">
         <section class="wrapper">
@@ -255,13 +267,15 @@
                     <div class="list">
                         <h5>Contact info</h5>
                         <ul>
-                            <li><a href="tel: +088 1234 6756 7867"><img src="images/Phone-default.svg" alt="">  (+088 1234 6756 7867)</a></li>
+                            <li><a href="tel: +088 1234 6756 7867"><img src="images/Phone-default.svg" alt="phone" />
+                                    (+088
+                                    1234 6756 7867)</a></li>
                             <li><a href="mailto: noname@gmail.com">noname@gmail.com</a></li>
                         </ul>
                         <div class="social">
-                            <a href="#"><img src="images/Fb-default.svg" alt="fb"></a>
-                            <a href="#"><img src="images/Messenger-default.svg" alt="Messenger-default"></a>
-                            <a href="#"><img src="images/whatsapp-default.svg" alt="WA"></a>
+                            <a href="#"><img src="images/Fb-default.svg" alt="fb" /></a>
+                            <a href="#"><img src="images/Messenger-default.svg" alt="Messenger-default" /></a>
+                            <a href="#"><img src="images/whatsapp-default.svg" alt="WA" /></a>
                         </div>
                     </div>
                 </div>
@@ -280,7 +294,5 @@
             </div>
         </section>
     </footer>
-
 </body>
-
 </html>
